<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:id="@+id/usernameField"
        android:layout_alignParentTop="true"
        android:layout_marginTop="73dp"
        android:hint="@string/usernameFieldHint"
        android:layout_alignLeft="@+id/passwordField"
        android:layout_alignStart="@+id/passwordField"
        android:layout_alignRight="@+id/passwordField"
        android:layout_alignEnd="@+id/passwordField"
        android:lines="1"
        android:backgroundTintMode="src_in"
        android:maxLength="12" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordField"
        android:layout_marginTop="38dp"
        android:layout_below="@+id/usernameField"
        android:layout_centerHorizontal="true"
        android:hint="@string/passwordFieldHint" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signInButtonText"
        android:id="@+id/signInButton"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/passwordField"
        android:layout_alignStart="@+id/passwordField"
        android:layout_alignRight="@+id/passwordField"
        android:layout_alignEnd="@+id/passwordField"
        android:onClick="loginButtonAction"
        android:background="@color/accent"
        android:textColor="@color/accentText"
        android:layout_marginTop="45dp"
        android:layout_below="@+id/passwordField" />

</RelativeLayout>
